Project

General

Profile

Actions

Bug #42333

closed

[upgrade] ceph_test_cls_rbd TestClsRbd.mirror fails on peer pool id test

Added by Jason Dillaman over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The pool peer id feature was never used and was dropped in the master branch. However, the cls_rbd test cases currently fail during upgrade testing due to this change in behavior. Fix the tests on older releases.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #42702: mimic: [upgrade] ceph_test_cls_rbd TestClsRbd.mirror fails on peer pool id testResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 30948
Actions #2

Updated by Jason Dillaman over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42702: mimic: [upgrade] ceph_test_cls_rbd TestClsRbd.mirror fails on peer pool id test added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF