test/cls_rbd: removed mirror peer pool test cases

The mirror peer pool id has never been used and has been dropped
from the Octopus release. This will fix the breakage in the test
cases where the pool id was tested.

Fixes: https://tracker.ceph.com/issues/42333
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit f0492ebd677cb8cb4656fc8f1dc871db1a6e7753)

Conflicts:
	src/cls/rbd/cls_rbd_client.cc
	src/cls/rbd/cls_rbd_client.h
- I could not find the reason for the conflicts; it seems that git
  got confused. Cherry-picked the changes in these two files manually.